# ArthSwap-MasterChef

./: .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .solcover.js  .solhint.json  .solhintignore  README.md  hardhat.config.ts  package.json  pyproject.toml  slither.config.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bugs.md  tasks.md
.husky/: pre-commit
contracts/: MasterChef.sol
contracts/interfaces/: IArthFactory.sol  IArthPair.sol  IArthRouter.sol  IERC20.sol  IRewarder.sol
contracts/libraries/: SignedSafeMath.sol
contracts/mocks/: ArthSwapTokenMock.sol  ERC20Mock.sol  MasterChefMock.sol  RewarderBrokenMock.sol  RewarderMock.sol
doc-templates/: contract.hbs
docs/: MasterChef.md
docs/interfaces/: IERC20.md  IRewarder.md
docs/libraries/: SignedSafeMath.md
docs/mocks/: ArthSwapTokenMock.md  ERC20Mock.md  MasterChefMock.md  RewarderBrokenMock.md  RewarderMock.md
scripts/: addLpToken.ts  deploy.ts
scripts/rocstar/: addresses.ts  parseTxAndLogs.ts  price-demo.ts  swap-demo.ts  swap-sell-demo.ts
test/: MasterChef.test.ts  index.ts
test/utilities/: index.ts  time.ts
